<resources>
    <string name="app_name">HiBuddy</string>
    <string name="user_name">Enter your username</string>
    <string name="user_pwd">Your Password</string>
    <string name="btn_login">Enter</string>

    <string name="full_name">Enter your full name</string>
    <string name="email_address">Your email@email.com</string>
    <string name="contact_number">Contact number example: +6013456789</string>
    <string name="dob">Your DOB eg: 27/8/2000</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>