<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DAF7A6"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="HELLO THERE!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:hint="@string/user_name"
        android:layout_width="248dp"
        android:layout_marginTop="10dp"
        android:layout_height="73dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="247dp"
        android:layout_height="63dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/user_pwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REGISTER HERE" />

</LinearLayout>